Fix alignment of text

--- a/css/main.css
+++ b/css/main.css
@@ -20,11 +20,12 @@ html {
 a {
   text-decoration: none;
   color: #0074d9;
+  text-align: center;
 }
 
 a:hover {
   background-color: #0074d9;
-  color: white;
+  color: #fff;
 }
 
 header {
@@ -33,4 +34,12 @@ header {
 
 body {
   margin: 0;
+}
+
+li {
+  display: inline-block;
+}
+
+h1 {
+  text-align: left;
 }
